refactor: utilize header as information exchange, remove unused interface
