# dto/request.go
@@ -1,12 +1,12 @@
 package dto
 
-type Request struct {
-	RequestId string `json:"request_id"`
-	Data      any    `json:"data"`
-}
-
-type RequestCredential struct {
+type BodyCredential struct {
 	AccountId    int    `json:"account_id"`
 	EmailAddress string `json:"email_address"`
 	Password     string `json:"password"`
+}
+
+type Header struct {
+	RequestId string `header:"request-id"`
+	Host      string `header:"host"`
 }
